...
                      android:layout_marginTop="40dp"
                      android:textSize="48sp"
                      android:textColor="@color/white"
                      android:gravity="center"/>

            <AutoCompleteTextView
                    android:id="@+id/et_mail"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    style="@style/LoginEditTextStyles"/>

            <EditText
                    android:id="@+id/et_password"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    style="@style/LoginEditTextStyles"
                    android:imeOptions="actionUnspecified"/>

            <include layout="@layout/button_primary"/>
...
