<Button
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="240dp"
        style="?android:textAppearanceSmall"
        android:id="@+id/btn_primary"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_login_button"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"/>